# serverwatch

./: Cargo.toml  README.md  build.rs
examples/: check_internet.rs
lib/checkers/: mod.rs  tls.rs
lib/scheduler/: mod.rs  simple_schd.rs
src/: lib.rs
src/checkers/: http.rs  mod.rs  tls.rs  tls_test_badssl_superfish.der
src/utils/: mod.rs  timeout.rs
web/: Rocket.toml  api.rs  checks.rs  main.rs  pages.rs  push.rs  serverwatch_state.rs  webpush_debug.rs
web/assets/: App.svelte  CheckItem.svelte  CheckList.svelte  ColorBar.svelte  LogDisplay.svelte  NotificationManager.js  QuickStatistics.svelte  StatBar.svelte  animations.js  main.js  package-lock.json  package.json  reltime.js  rollup.config.js  script.js  store.js  style.sass  sw-main.js
web/datastores/: mod.rs  scheme.sql  sqlite.rs  test.rs
web/templates/: index.html.hbs
