[package]
name = "serverwatch"
version = "0.1.0"
authors = ["Mao Wtm <m@maowtm.org>"]
edition = "2018"

[features]
default = ["checkers"]
checkers = ["reqwest", "lazy_static", "openssl", "openssl-sys", "foreign-types", "libc"]

[dependencies]
reqwest = { version = "0.9.19", optional = true }
lazy_static = { version = "1.3.0", optional = true }

openssl = { version = "0.10.24", optional = true }
openssl-sys = { version = "0.9.48", optional = true }
foreign-types = { version = "0.3.2", optional = true }

libc = { version = "0.2.59", optional = true }
