[package]
name = "serverwatch"
version = "0.1.0"
authors = ["Mao Wtm <m@maowtm.org>"]
edition = "2018"

[features]
default = ["checkers"]
checkers = ["reqwest", "lazy_static", "openssl", "openssl-sys", "foreign-types", "libc"]
web = ["rocket", "rocket_contrib", "serde", "serde_json", "rusqlite"]

[dependencies]
reqwest = { version = "0.9.19", optional = true }
lazy_static = { version = "1.3.0", optional = true }

openssl = { version = "0.10.24", optional = true }
openssl-sys = { version = "0.9.48", optional = true }
foreign-types = { version = "0.3.2", optional = true }

libc = { version = "0.2.59", optional = true }

rocket = { version = "0.4.2", optional = true }
rocket_contrib = { version = "0.4.2", optional = true, features = ["handlebars_templates", "json", "serve"], default-features = false }
serde = { version = "1.0.94", optional = true }
serde_json = { version = "1.0.40", optional = true }

rusqlite = { version = "0.20.0", optional = true }

[lib]
name = "serverwatch"
path = "lib/lib.rs"

[[bin]]
name = "web"
path = "web/main.rs"
required-features = ["web"]
